# img2txt

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .safety-policy.yml  README.md  pyproject.toml
.github/workflows/: branch.yaml  publish-to-test-pypi.yml
data/: test_unsupported.txt
docs/: conf.py  index.rst
img2text/: __init__.py  engine.py
img2text/utils/: image_rotation_auto.py
img2text2/: engine.py
invoice2text/: app.py
invoice2text/img2text/: __init__.py  engine.py  pipeline.py
invoice2text/img2text/utils/: singleton.py
tests/: data.py  test_api.py  test_get_box.py  test_image_rotation_auto.py  test_paddle_ocr.py  test_plot_ocr_res.py  test_put_line_num.py  test_read_image_to_ndarray.py  test_singleton.py  test_tesseract_ocr.py
