[tool.poetry]
name = "invoice2text"
version = "0.1.1"
description = "Invoice to text"
authors = ["Jessy Pango <kvnjessy@gmail.com>"]
readme = "README.md"
packages = [
    { include = "invoice2text" },
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pillow = "^10.3.0"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
paddleocr = "^2.7.3"
pytesseract = "^0.3.10"
paddlepaddle = {version = "^2.6.1", source = "mirror.baidu.com"}
jinja2 = "^3.1.4"


[[tool.poetry.source]]
name = "mirror.baidu.com"
url = "https://mirror.baidu.com/pypi/simple"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
